package com.tmd.entity.dto;

import lombok.Data;

/**
 * @Description
 * @Author Bluegod
 * @Date 2025/9/14
 */
@Data
public class PStickVO {
    private Long id;
    private String name;
    private String content;
    private String createdAt;
    private String updatedAt;
}
