package com.tmd.entity.dto;

import lombok.Data;

/**
 * @Description
 * @Author Bluegod
 * @Date 2025/9/11
 */
@Data
public class StickVO {
    private Long id;
    private String content;
    private String createdAt;
    private String updatedAt;
}
